# ordered-bitmap-scan

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  bitmap_index_filter.control  docker-compose.yml
sql/: benchmark.sql  test_lossy.sql
src/: lib.rs
