[package]
name = "bitmap_index_filter"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "pgrx_embed_bitmap_index_filter"
path = "src/bin/pgrx_embed.rs"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = ["pg18"]
pg18 = ["pgrx/pg18"]
pg_test = []

[dependencies]
pgrx = "0.17.0"

[dev-dependencies]
pgrx-tests = "0.17.0"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
